@@ -18,7 +18,7 @@ If you are using \href{http://maven.apache.org/}{Maven} as your build tool add t
    </dependency>
 \end{lstlisting}
 
-Where \verb|needle.version| currently should have the value "2.1". Check for the most current version at \href{http://sourceforge.net/projects/jbosscc-needle/}{sourceforge} or \href{http://needle.spree.de/}{our project web site}.
+Where \verb|needle.version| currently should have the value "2.2". Check for the most current version at \href{http://sourceforge.net/projects/jbosscc-needle/}{sourceforge} or \href{http://needle.spree.de/}{our project web site}.
 
 To reduce complexity Needle has no transitive dependencies, and does thus not restrict you to use specific versions of JUnit or TestNG.
 On the other hand, you will have to explicitely configure dependencies for the test scope, for example, to Hibernate as the JPA provider.
