@@ -27,8 +27,8 @@ It is licensed under GNU Lesser General Public License (LGPL) version 2.1 or lat
 
 	\item Provide Utilities for Reflection, e.g. for private method invocation or field access
 
-	\item Needle can be used with JUnit or TestNG.
-	\item It supports EasyMock and Mockito out-of-the-box but could also be extended with other frameworks.
+	\item Needle can be used with \href{http://www.junit.org}{JUnit} or \href{http://testng.org/}{TestNG}.
+	\item It supports \href{http://www.easymock.org/}{EasyMock} and \href{http://code.google.com/p/mockito/}{Mockito} out-of-the-box but could also be extended with other frameworks.
 \end{itemize}
 
 \section{Links}
@@ -36,11 +36,6 @@ It is licensed under GNU Lesser General Public License (LGPL) version 2.1 or lat
 \begin{itemize}
  \item Needle Home Page:   	\url{http://needle.spree.de/}
 	\item Downloads:        \url{https://sourceforge.net/projects/jbosscc-needle/}
-	\item Forums:           \url{https://sourceforge.net/projects/jbosscc-needle/forums}
-	\item Issue Tracking:   \url{https://sourceforge.net/tracker/?group\_id=306915}
-	\item Source Code:
+	\item Issue Tracking:   \url{https://github.com/akquinet/needle/issues}
+	\item Source Code:	\url{https://github.com/akquinet/needle}
 \end{itemize}
-
-\begin{lstlisting}[caption=Source Code]
-svn co https://jbosscc-needle.svn.sourceforge.net/svnroot/jbosscc-needle/trunk/jbosscc-needle/ jbosscc-needle
-\end{lstlisting}
