@@ -1,5 +1,5 @@
 custom.injection.annotations=de.akquinet.jbosscc.needle.injection.CustomInjectionAnnotation1,de.akquinet.jbosscc.needle.injection.CustomInjectionAnnotation2,de.unknown.Annotation
-custom.injection.provider.classes=de.akquinet.jbosscc.needle.injection.CustomMapInjectionProvider,de.unknown.InjectionProvider,org.easymock.EasyMockSupport
+custom.injection.provider.classes=de.akquinet.jbosscc.needle.injection.CustomMapInjectionProvider,de.unknown.InjectionProvider
 db.operation=de.akquinet.jbosscc.needle.db.operation.hsql.HSQLDeleteOperation
 
 
